@@ -48,6 +48,9 @@
 			<trans-unit id="tx_transactor_transactions.config" xml:space="preserve">
 				<source>Configuration:</source>
 			</trans-unit>
+			<trans-unit id="tx_transactor_transactions.config_ext" xml:space="preserve">
+				<source>Extension Configuration:</source>
+			</trans-unit>config_ext
 			<trans-unit id="tx_transactor_transactions.user" xml:space="preserve">
 				<source>Gateway specific:</source>
 			</trans-unit>
