@@ -26,10 +26,10 @@
   "require": {
     "php": ">=5.6.0,<7.99.99",
     "typo3/cms-core": ">=6.2.0,<8.99.99",
-    "typo3-ter/div2007": ">=1.10.7"
+    "jambagecom/div2007": ">=1.10.7"
   },
   "suggest": {
-    "typo3-ter/migration_core": ">=0.0.0"
+    "jambagecom/migration_core": ">=0.0.0"
   },
   "autoload": {
     "psr-4": {
